deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-priv-service
spec:
  selector:
    app: flask-priv
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
